[package]
name = "p2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "test-circle-collision"
crate-type = ["bin"]

[[example]]
name = "test-winit"
crate-type = ["bin"]

[dev-dependencies]
raqote = "0.7.10"
font-kit = "0.5.0"
minifb = "0.15.3"
winit = "0.29.15"
softbuffer = "0.4.2"
